# typelits-witnesses

./: typelits-witnesses.cabal
compat/ghc_current/GHC/TypeNats/: Compat.hs
compat/ghc_pre_9_6/GHC/TypeNats/: Compat.hs
src/GHC/TypeLits/: Compare.hs  Witnesses.hs
src/GHC/TypeLits/Witnesses/: Unsafe.hs
src/GHC/TypeNats/: Compat.hs
