cabal-version:  3.0
name:           typelits-witnesses
version:        99.0.0.0
synopsis:       Existential witnesses, singletons, and classes for operations on GHC TypeLits
description:    This library contains:
                .
                *   A small specialized subset of the *singletons* library as it pertains to
                    `Nat` and `Symbol`, for when you need some simple functionality without
                    wanting to invoke the entire *singletons* library.
                *   Operations for manipulating these singletons and `KnownNat` and
                    `KnownSymbol` instances, such as addition and multiplication of
                    singletons/`KnownNat` instances.
                *   Operations for the comparison of `Nat`s in a way that works well with
                    *GHC.TypeLits*'s different comparison systems.  This is helpful for
                    bridging together libraries that use different systems; this functionality
                    is not yet provided by *singletons*.
category:       Data
homepage:       https://github.com/mstksg/typelits-witnesses
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2018
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/mstksg/typelits-witnesses.git

library
  exposed-modules:
      GHC.TypeNats.Compat
      GHC.TypeLits.Compare
      GHC.TypeLits.Witnesses
      GHC.TypeLits.Witnesses.Unsafe
  hs-source-dirs:
      src
  ghc-options: -Wall -Wredundant-constraints -Werror=incomplete-patterns -Wcompat
  build-depends:
      base >=4.16 && <5
    , some >= 1.0.6
  default-language: Haskell2010
